--- a/github.Rmd
+++ b/github.Rmd
@@ -5,6 +5,7 @@ output:
   pdf_document:
     fig_caption: no
 ---
+
 <style>
 table, th, td { text-align:right; }
 th, td {padding: 10px;}
@@ -12,7 +13,7 @@ th, td {padding: 10px;}
 
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
 whichcomp <- strsplit(getwd(),"/")[[1]][3]
-load(paste0("c:/users/", whichcomp, "/Dropbox/Resma3/Resma3.RData"))
+load(paste0("c:/users/", whichcomp, "/Dropbox/teaching/Resma3/Resma3.RData"))
 library(knitr)
 opts_chunk$set(fig.width=6, fig.align = "center", 
       out.width = "70%", warning=FALSE, message=FALSE)
@@ -21,21 +22,21 @@ library(grid)
 ```
 `r hl()$basefontsize()`
 
-#Version Control and Collaboration, github
+#Version Control and Collaboration, Github
 
-Notice that the title doesn't read *with github*. This is because github is not an R package. It is much more general.
+Notice that the title doesn't read *with Github*. This is because github is not an R package. It is much more general.
 
 Once you start working on larger projects (like a thesis?) you quickly run into the following problem: you consider a change to the existing document but you are not sure yet. So you make a copy. Then the same thing hapens again, and again ... Eventually you have 10 copies with strange names and no idea what is what. Version control is a general principle to keep track of all these changes. 
 
 It gets even more important when you begin to collaborate with others, and everyone makes changes to the same document, possibly at the same time.
 
-There are many version control systems available. In fact Dropbox has a very rudimentary one, it keeps older versions of a file so you can restore it when needed. But one of the very best is github, located at [https://github.com/](https://github.com/). 
+There are many version control systems available. In fact Dropbox has a very rudimentary one, it keeps older versions of a file so you can restore it when needed. But one of the very best is Github, located at [https://github.com/](https://github.com/). 
 
 For a detailed introduction to git, github and how they work with RStudio see [Happy git with R](http://happygitwithr.com).
 
 Unfortunately getting going with github is not a simple process. You need to install several programs. My advice is to follow the instructions on *Happy git with R* **precisely**.
 
-The main idea behind github is to branch a repository. Essentially that makes a complete copy. You can then make any changes, but without changing the *master* copy. Once you are certain your changes will stay you *commit* them back to the master. You can make such a branch of any repo that was declared public, which is most of them, even if it is not yours. Then if they make changes to the files, all you need to do is *pull* the repo and you also have the latest version!
+The main idea behind github is to *branch* a *repo* (repository). Essentially that makes a complete copy. You can then make any changes, but without changing the *master* copy. Once you are certain your changes will stay you *commit* them back to the master. You can make such a branch of any repo that was declared public, which is most of them, even if it is not yours. Then if they make changes to the files, all you need to do is *pull* the repo and you also have the latest version!
 
 This course (the Rmds) is available on github at [https://github.com/WolfgangRolke/Computing-with-R](https://github.com/WolfgangRolke/Computing-with-R). 
 
