--- a/character1.Rmd
+++ b/character1.Rmd
@@ -13,7 +13,7 @@ th, td {padding: 10px;}
 
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
 whichcomp <- strsplit(getwd(),"/")[[1]][3]
-load(paste0("c:/users/", whichcomp, "/Dropbox/Resma3/Resma3.RData"))
+load(paste0("c:/users/", whichcomp, "/Dropbox/teaching/Resma3/Resma3.RData"))
 library(knitr)
 opts_chunk$set(fig.width=6, fig.align = "center", 
       out.width = "70%", warning=FALSE, message=FALSE)
@@ -85,7 +85,7 @@ x[vowels]
 *stringr* provides  functions  for  both  
 
 1)  basic  manipulations  
-2)  for  regular  expression operations
+2)  regular  expression operations
 
 The following table contains the *stringr* functions for basic string operations: 
 
@@ -130,7 +130,7 @@ str_dup("ab", 2)
 str_dup("ab", 1:3)
 ```
 
-Another handy function that we can find in stringr is str_pad() for padding a string. This is useful if we want to have a nice alignmend when printing some text.
+Another handy function that we can find in stringr is str_pad() for padding a string. This is useful if we want to have a nice alignment when printing some text.
 
 Its default usage has the following form:
 
@@ -206,7 +206,7 @@ library(tidytext)
 stop_words
 ```
 
-So we now want to go through dracula and remove all the appearances of any of the words in stop_words. This can be done with the *dplyr* command *anti_join*. However the two lists need to have the same column names, and in dracula it is *text* whereas in stop_words it is *word*. Again, the library *tidytext* has a command:
+So we now want to go through Dracula and remove all the appearances of any of the words in stop_words. This can be done with the *dplyr* command *anti_join*. However the two lists need to have the same column names, and in Dracula it is *text* whereas in stop_words it is *word*. Again, the library *tidytext* has a command:
 
 ```{r}
 dracula %>% 
@@ -220,12 +220,12 @@ So now for the most common words:
 
 ```{r}
 dracula %>% 
-  count(word, sort=T)
+  count(word, sort=TRUE)
 ```
 
 so *time* is the most common word, it appears 390 times in the book.
 
-How do the words in Dracula compare to another famous fiction book of the era, The Time Machine, by H. G. Wells? This is book #35 in the gutenberg catalogue:
+How do the words in Dracula compare to another famous fiction book of the era, The Time Machine, by H. G. Wells? This is book #35 in the Gutenberg catalogue:
 
 ```{r cache=TRUE}
 time.machine <- gutenberg_download(35)[, 2]
@@ -242,9 +242,9 @@ time.machine %>%
 
 Actually, time is the most common word in both books (not a surprise in a book called The Time Machine!)
 
-Can we do a graphical display of the word frequencies? We will need some rutines from yet another package called *tidyr*.
+Can we do a graphical display of the word frequencies? We will need some routines from yet another package called *tidyr*.
 
-We begin by joining the two book together, with a new column identifying the book:
+We begin by joining the two books together, with a new column identifying the book:
 
 ```{r}
 library(tidyr)
@@ -274,14 +274,18 @@ Next we find all the words that appear in both books, and look at their relative
 
 ```{r}
 freqs %>% 
-   spread(key=book, value = prop) %>% #use one column for Dracula's 
-                #proportions and another for Time Machine
+   spread(key=book, value = prop) %>% 
+            #use one column for Dracula's 
+            #proportions and another for Time Machine
    na.omit()  -> #words that appear in only one book are NA, 
                 #eliminate them    
   common.words
 print(common.words, n=4)
-ggplot(common.words, aes(x=Dracula, 
-                         y= common.words[ ,"Time Machine"])) +
-  labs(x="Dracula", y="Time Machine") +
-  geom_text(aes(label=word), check_overlap = TRUE, vjust=1.5)
+common.words %>%
+  ggplot(aes(x=Dracula, y= common.words[ ,"Time Machine"])) +
+    labs(x = "Dracula", 
+         y = "Time Machine") +
+    geom_text(aes(label = word), 
+              check_overlap = TRUE, 
+              vjust = 1.5)
 ```
