--- a/dataformats.Rmd
+++ b/dataformats.Rmd
@@ -13,7 +13,7 @@ th, td {padding: 10px;}
 
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
 whichcomp <- strsplit(getwd(),"/")[[1]][3]
-load(paste0("c:/users/", whichcomp, "/Dropbox/Resma3/Resma3.RData"))
+load(paste0("c:/users/", whichcomp, "/Dropbox/teaching/Resma3/Resma3.RData"))
 library(knitr)
 opts_chunk$set(fig.width=6, fig.align = "center", 
       out.width = "70%", warning=FALSE, message=FALSE)
@@ -85,6 +85,15 @@ rownames(x)
 colnames(x) <- c("Height", "Age 1", "Age 2")
 x
 ```
+
+Actually I would recommend
+
+```{r}
+colnames(x) <- c("Height", "Age.1", "Age.2")
+x
+```
+
+empty spaces in names are allowed but can on occasion lead to problems, so avoiding them is a good idea. Of course they are not nice as labels in graphs or as titles in tables, but it is usually easy to change those.
 
 Here is a strange way to make a matrix:
 
