--- a/generate.vectors.Rmd
+++ b/generate.vectors.Rmd
@@ -13,7 +13,7 @@ th, td {padding: 10px;}
 
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
 whichcomp <- strsplit(getwd(),"/")[[1]][3]
-load(paste0("c:/users/", whichcomp, "/Dropbox/Resma3/Resma3.RData"))
+load(paste0("c:/users/", whichcomp, "/Dropbox/teaching/Resma3/Resma3.RData"))
 library(knitr)
 opts_chunk$set(fig.width=6, fig.align = "center", 
       out.width = "70%", warning=FALSE, message=FALSE)
@@ -26,14 +26,14 @@ library(grid)
 
 There are numerous ways to generate vectors which have some structure. Here are some useful commands:
 
-The easiest way to do this is to use the *c* command:
+The easiest way to do this is to use the *c* (concatenate) command:
 
 ```{r}
 x <- c(0, 2, 3, 1, 5)
 x
 ```
 
-to make sequences us *:*
+to make sequences use *:*
 
 ```{r}
 1:5
@@ -63,7 +63,8 @@ seq(0, 10, length=20)
 this creates a series of sequences of integers each ending by the numbers given as arguments:
 
 ```{r}
-sequence(1:5)
+sequence(10)
+sequence(c(2, 5, 3))
 ```
 
 -  rep
@@ -83,7 +84,7 @@ rep(1:10, 1:10)
 
 -  gl
 
-The function *gl* (generate levels) is very useful because it generates regular series of factors. The usage of this fonction is gl(k, n) where k is the number of levels (or classes), and n is the number of replications in each level. 
+The function *gl* (generate levels) is very useful because it generates regular series of factors. The usage of this function is gl(k, n) where k is the number of levels (or classes), and n is the number of replications in each level. 
 
 Two options may be used: length to specify the number of data produced, and labels to specify the names of the levels of the factor. 
 
@@ -94,6 +95,8 @@ gl(2, 6, label=c("Male", "Female"))
 gl(2, 10)
 gl(2, 1, length=20)
 ```
+
+as we saw earlier, factors are represented by integers.
 
 -  expand.grid
 
@@ -138,3 +141,4 @@ D(exp1, "z")
 eval(D(exp1, "z"))
 ```
 
+In general R's use as a symbolic language is very limited. There are of course many purpose built languages for this, such as Maple or Mathematica.
