--- a/graphs.Rmd
+++ b/graphs.Rmd
@@ -12,7 +12,7 @@ th, td {padding: 10px;}
 
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
 whichcomp <- strsplit(getwd(),"/")[[1]][3]
-load(paste0("c:/users/", whichcomp, "/Dropbox/Resma3/Resma3.RData"))
+load(paste0("c:/users/", whichcomp, "/Dropbox/teaching/Resma3/Resma3.RData"))
 library(knitr)
 opts_chunk$set(fig.width=6, fig.align = "center",
       out.width = "70%", warning=FALSE, message=FALSE)
@@ -85,7 +85,7 @@ range(x)
 hist(x, breaks=c(0, 50, 80, 100, 120, 150, 250), plot = FALSE)$counts
 ```
 
-Often we want to compare a histogram with a theoretical curve, say a probability density
+Often we want to compare a histogram with a theoretical curve, say a probability density. Then we can use the curve command with the argument add=TRUE:
 
 ```{r}
 x <- c(rnorm(1500, 100, 20), rnorm(1000, 140, 10))
@@ -121,17 +121,49 @@ qqline(x)
 
 ```{r}
 attach(faithful)
-plot(Eruptions, Waiting.Time, xlab = "Length of Last Eruption",
-     ylab="Time unitl Next Eruption", main="Old Faithful Guyser")
+plot(Eruptions, Waiting.Time, 
+     xlab = "Length of last eruption",
+     ylab = "Time until next eruption", 
+     main = "Old Faithful Guyser")
 ```
 
 Let's add the least squares regression fit to the graph:
 
 ```{r}
-plot(Eruptions, Waiting.Time, xlab = "Length of Last Eruption",
-     ylab="Time unitl Next Eruption", main="Old Faithful Guyser")
+plot(Eruptions, Waiting.Time, 
+     xlab = "Length of last eruption",
+     ylab = "Time until next eruption", 
+     main = "Old Faithful Guyser")
 abline(lm(Waiting.Time~Eruptions), lwd=2, lty=2)
 ```
+
+There are a lot of different plotting symbols:
+
+```{r}
+plot(0:16, rep(0, 17), ylim=c(0,1), 
+     type="n", xlab="", ylab="", axes=F)
+for(i in 1:15) {
+  for(k in 1:3) {
+    points(i, c(0.8, 0.5, 0.2)[k], pch=i+(k-1)*15)
+    text(i, c(0.9, 0.6, 0.3)[k], label=i+(k-1)*15, adj = 0) 
+  }
+}  
+```
+
+Notice the setup of an empty graph!
+
+Also, different line types:
+
+```{r}
+plot(0:7, rep(0, 8), ylim=c(0,1), 
+     type="n", xlab="", ylab="", axes=F)
+for(i in 1:6) {
+  segments(i, 0.2, i, 1, lty=i)
+  text(i, 0.1, i)
+}
+
+```
+
 
 Consider the data set mtcars, which is part of base R. It has data on 32 different cars:
 
@@ -146,10 +178,13 @@ attach(mtcars)
 cols <- rep("blue", 32)
 cols[cyl==6] <- "green"
 cols[cyl==8] <- "red"
-plot(hp, mpg, xlab="Horsepower", ylab="Miles per Gallon",
-     col=cols, pch=20)
+plot(hp, mpg, 
+     xlab = "Horsepower", 
+     ylab = "Miles per Gallon",
+     col = cols, pch = 20)
 legend(250, 33, paste(2*2:4, "Cylinders"),
-       pch=rep(20, 3), col = c("blue", "green", "red"))
+       pch = rep(20, 3), 
+       col = c("blue", "green", "red"))
 ```
 
 ##Multiple Graphs
@@ -180,9 +215,9 @@ boxplot(mpg, axes = FALSE)
 
 ##Functions that create graphs
 
-When I write a paper or a talk or anything else that requires some graph I always write a routine *plot.mytalk*, which has everything to recreate every graph. This is a great way to not only make changes if necessary but also to remind myself what I did back years ago when I wrote it.
+When I write a paper or a talk or anything else that requires some graphs I always write a routine *plot.mytalk*, which has everything to recreate every graph. This is a great way to not only make changes if necessary but also to remind myself what I did back years ago when I wrote it.
 
-Caveat: these days R Markdown can be used for the same purpose
+Caveat: these days R Markdown can be used for the same purpose.
 
 ##Graphs that don't look like Graphs
 
