--- a/hist.Rmd
+++ b/hist.Rmd
@@ -8,14 +8,14 @@ output:
 
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
 whichcomp <- strsplit(getwd(),"/")[[1]][3]
-load(paste0("c:/users/", whichcomp, "/Dropbox/Resma3/Resma3.RData"))
+load(paste0("c:/users/", whichcomp, "/Dropbox/teaching/Resma3/Resma3.RData"))
 
 require(knitr)
 require(ggplot2)
 require(grid)
 require(leaps)
 ```
-`r rmd$basefontsize()`
+`r hl()$basefontsize()`
 
 <style>
 table, th, td { text-align:right; }
