--- a/model.notation.Rmd
+++ b/model.notation.Rmd
@@ -1,16 +1,11 @@
 ---
-title: ''
-output: html_document
----
-
----
 header-includes: \usepackage{color}
 output:
   html_document: default
   pdf_document:
     fig_caption: no
-runtime: shiny
 ---
+
 <style>
 table, th, td { text-align:right; }
 th, td {padding: 10px;}
@@ -18,7 +13,7 @@ th, td {padding: 10px;}
 
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
 whichcomp <- strsplit(getwd(),"/")[[1]][3]
-load(paste0("c:/users/", whichcomp, "/Dropbox/Resma3/Resma3.RData"))
+load(paste0("c:/users/", whichcomp, "/Dropbox/teaching/Resma3/Resma3.RData"))
 library(knitr)
 opts_chunk$set(fig.width=6, fig.align = "center", 
       out.width = "70%", warning=FALSE, message=FALSE)
@@ -29,7 +24,7 @@ library(grid)
 
 #Model Notation
 
-A number of R routines (for example boxplot and lm) use the *model* notation *y~x*, which you should read as * y modeled as a function of x*. So for example if we want to find the least squares regression model of y on x we use
+A number of R routines (for example boxplot and lm) use the *model* notation *y~x*, which you should read as *y modeled as a function of x*. So for example if we want to find the least squares regression model of y on x we use
 
 ```{r eval=FALSE}
 lm(y ~ x)
@@ -62,7 +57,7 @@ lm(y ~ x + z)
 -  fit the interaction term with
 
 ```{r eval=FALSE}
-lm(y ~ x* z)
+lm(y ~ x * z)
 ```
 
 In the case of three (or more predictors) there are all sorts of possibilities:
