--- a/rcpp.Rmd
+++ b/rcpp.Rmd
@@ -5,6 +5,7 @@ output:
   pdf_document:
     fig_caption: no
 ---
+
 <style>
 table, th, td { text-align:right; }
 th, td {padding: 10px;}
@@ -12,7 +13,7 @@ th, td {padding: 10px;}
 
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
 whichcomp <- strsplit(getwd(),"/")[[1]][3]
-load(paste0("c:/users/", whichcomp, "/Dropbox/Resma3/Resma3.RData"))
+load(paste0("c:/users/", whichcomp, "/Dropbox/teaching/Resma3/Resma3.RData"))
 library(knitr)
 opts_chunk$set(fig.width=6, fig.align = "center", 
       out.width = "70%", warning=FALSE, message=FALSE)
@@ -100,7 +101,9 @@ summary(microbenchmark(dist4(x, y)))["mean"]
 
 Those of you who already know a bit of C++ are going to be quite amazed, because this is not even C++, it is sort of "vectorized" C++!
 
-Now the difference between 3.3 and 12.1 milliseconds might not seem like much, but imagine if we had to run this routine one million times, then the R routine would take $12*10^{-3}\times 10^6/3600=3.3$ hours, but the Cpp routine takes only 1.5 hours. Writing it takes literally 1 minute! (If you know how)  
+`r hl()$hr()`
+
+Now the difference between 3.6 and 12.1 milliseconds (the fastest non-C++ time) might not seem like much, but imagine if we had to run this routine one million times, then the R routine would take $12*10^{-3}\times 10^6/3600=3.3$ hours, but the Cpp routine takes only 1.5 hours. Writing it takes literally 1 minute! (assuming you know how)  
 
 To start let's discuss a few differences between R and C++ syntax:
 
@@ -148,24 +151,30 @@ Not only is Rcpp vectorized, many standard R functions have been ported to Rcpp.
 
 Note: generating stochastic process can be quite slow in R because they are difficult to vectorize, with one step of a loop depending on the previous one.
 
+The output of our function is going to be a nx2 matrix, so we will use the data type *NumericMatrix*.
+
 ```{r engine='Rcpp'}
 #include <Rcpp.h>
 using namespace Rcpp;
 // [[Rcpp::export]]
 NumericMatrix bw(int n, double delta) {
  NumericMatrix xy(n, 2);
-  xy(0, 0)=0;
-  xy(0, 1)=0;
+  xy(0, 0) = 0;
+  xy(0, 1) = 0;
   for(int i=2; i<n; ++i) {
-    xy(i, 0) = xy(i-1, 0)+delta*rnorm(1)[0];
-    xy(i, 1) = xy(i-1, 1)+delta*rnorm(1)[0];
+    xy(i, 0) = xy(i-1, 0) + delta*rnorm(1)[0];
+    xy(i, 1) = xy(i-1, 1) + delta*rnorm(1)[0];
  }
  return xy;
 }
 ```
 
 ```{r}
-plot(bw(10000, 1), type="l", xlab="x", ylab="y", col="blue")
+plot(bw(10000, 1), 
+     type = "l", 
+     xlab = "x", 
+     ylab = "y", 
+     col = "blue")
 ```
 
 Notice the term *rnorm(1)[0]*, a little different from the standard R usage.
@@ -184,7 +193,7 @@ Let's start with a simple C++ implementation of the R *sum* function:
 using namespace Rcpp;
 // [[Rcpp::export]]
 double sum_cpp(NumericVector x) {
- double total=0.0;
+ double total = 0.0;
  for(int i=0; i<x.length(); ++i) total +=x(i);
  return total;
 }
@@ -195,7 +204,7 @@ sum(x)
 sum_cpp(x)
 ```
 
-Notice the term *total+=x(i);* which is standard C++ shortand for *total = total + x(i);*
+Notice the term *total+=x(i);* which is standard C++ shorthand for *total = total + x(i);*
 
 Now the same can be written as:
 
@@ -263,16 +272,15 @@ and now for the golden ratio:
 golden_ratio <- function(n, fun) {
  fun(n)/fun(n-1)
 }
-microbenchmark(golden_ratio(10, fun=fibR))
-microbenchmark(golden_ratio(10, fun=fib_cpp))
+summary(microbenchmark(golden_ratio(10, 
+                      fun=fibR)))["mean"]
+summary(microbenchmark(golden_ratio(10,
+                       fun=fib_cpp)))["mean"]
 ```
 
 not only is the cpp version much faster, in this example R is actually quite useless: while it does recursion, doing it to often quickly becomes a problem (because of memory issues). 
 
-```{r cache=TRUE}
-summary(microbenchmark(golden_ratio(30, fun=fibR), times = 10L))["mean"]
-summary(microbenchmark(golden_ratio(30, fun=fib_cpp), times = 10L))["mean"]
-```
+Now
 
 ```{r cache=TRUE}
 golden_ratio(30, fun=fib_cpp)
