--- a/shiny.Rmd
+++ b/shiny.Rmd
@@ -5,6 +5,7 @@ output:
   pdf_document:
     fig_caption: no
 ---
+
 <style>
 table, th, td { text-align:right; }
 th, td {padding: 10px;}
@@ -12,7 +13,7 @@ th, td {padding: 10px;}
 
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
 whichcomp <- strsplit(getwd(),"/")[[1]][3]
-load(paste0("c:/users/", whichcomp, "/Dropbox/Resma3/Resma3.RData"))
+load(paste0("c:/users/", whichcomp, "/Dropbox/teaching/Resma3/Resma3.RData"))
 library(knitr)
 opts_chunk$set(fig.width=6, fig.align = "center", 
       out.width = "70%", warning=FALSE, message=FALSE)
@@ -28,17 +29,24 @@ library(grid)
 library(shiny)
 ```
 
-shiny is a package that has routines to create interactive web applications that run in a browser. Every app has two files:
+shiny is a package that has routines to create interactive web applications that run in a browser. 
 
--  *ui* contains information about the layout of the page (**u**ser **i**nterface) 
--  *server* has the R routine that create the content of the page.
+As an example consider the app [Taylor Polynomials]( https://wolfgangrolke.shinyapps.io/taylor/).
+
+
+Every app has two files:
+
+-  *ui* contains information about the layout of the page (**u**ser **i**nterface).   
+-  *server* has the R routines that create the content of the page.
 
 Let's begin by creating a page that does the following: it generates a data set with n observations from a standard normal distribution and then draws the histogram. The user can choose n:
 
 **example1**
 ```{r example1, eval=FALSE}
 ui <- fluidPage(
-  numericInput("n", "Sample Size", 1000),
+  numericInput(inputId = "n", #name of variable
+               label = "Sample Size", #text on page
+               value = 1000), #starting value
   plotOutput("plot1")
 )
 server <- function(input, output) {
@@ -46,8 +54,11 @@ server <- function(input, output) {
     x <- rnorm(input$n)  
     bw <- diff(range(x))/50
     ggplot(data.frame(x=x), aes(x)) +
-    geom_histogram(color = "black", fill = "white", binwidth = bw) + 
-    labs(x="x", y="Counts")
+       geom_histogram(color = "black", 
+                   fill = "white", 
+                   binwidth = bw) + 
+       labs(x = "x", 
+            y = "Counts")
   })
 }
 shinyApp(ui, server)
@@ -56,15 +67,16 @@ shinyApp(ui, server)
 If you are on a computer that has R running with shiny installed you can run this and all the apps here with
 
 ```{r eval=FALSE}
-runGitHub("Computing-with-R", "WolfgangRolke", 
+runGitHub(repo = "Computing-with-R", 
+          username = "WolfgangRolke", 
           subdir = "shiny/example1")
 ```
 
 you can also do this: File > New File > Shiny Web App, copy-paste commands into file, click Run App
 
-Next we improve the app in three ways:
+Next we will improve the app in three ways:
 
--  the layout 
+-  nicer layout 
 -  add the possibility to change the number of bins
 -  add a title
 
@@ -72,9 +84,15 @@ Next we improve the app in three ways:
 ui <- fluidPage(
   titlePanel("Histogram App"),
   sidebarLayout(
-    sidebarPanel(
-      numericInput("n", "Sample Size", 1000),
-      textInput("nbins", "Number of bins", "50", width = "20%")
+    sidebarPanel( #Input widgets on left side of page
+    numericInput(inputId = "n", 
+               label = "Sample Size", 
+               value = 1000, 
+              width = "40%"), #size of box
+    textInput(inputId = "nbins", 
+              label = "Number of bins", 
+              value = "50", 
+              width = "20%") #size of box
     ),
     mainPanel(
       plotOutput("plot1")
@@ -85,8 +103,11 @@ server <- function(input, output) {
     x <- rnorm(input$n)  
     bw <- diff(range(x))/as.numeric(input$nbins)
     ggplot(data.frame(x=x), aes(x)) +
-      geom_histogram(color = "black", fill = "white", binwidth = bw) + 
-      labs(x="x", y="Counts")
+      geom_histogram(color = "black", 
+                     fill = "white", 
+                     binwidth = bw) + 
+      labs(x = "x", 
+           y = "Counts")
   })
 }
 shinyApp(ui, server)
@@ -106,33 +127,44 @@ ui <- fluidPage(
     sidebarPanel(
       numericInput("n", "Sample Size", 1000),
       selectInput("whichgraph", "What Graph?", 
-          choices=c("Histogram", "Boxplot"), selected="Boxplot"),
-      conditionalPanel(condition="input.whichgraph=='Histogram'",     
-         textInput("nbins", "Number of bins", "50", width = "20%")
+          choices = c("Histogram", "Boxplot"),
+          selected = "Boxplot"),
+      conditionalPanel(
+         condition = "input.whichgraph=='Histogram'",     
+            textInput("nbins", 
+                      "Number of bins", 
+                      "50", 
+                      width = "20%")
       )   
     ),
     mainPanel(
-      conditionalPanel(condition="input.whichgraph=='Histogram'",
-         plotOutput("plot1")
+      conditionalPanel(
+        condition="input.whichgraph=='Histogram'",
+           plotOutput("plot1")
       ),
-      conditionalPanel(condition="input.whichgraph=='Boxplot'",
-         plotOutput("plot2")
+      conditionalPanel(
+        condition="input.whichgraph=='Boxplot'",
+           plotOutput("plot2")
       )   
     )  
-  )   
 ))
 server <- function(input, output) {
   output$plot1 <- renderPlot({
     x <- rnorm(input$n)  
     bw <- diff(range(x))/as.numeric(input$nbins)
     ggplot(data.frame(x=x), aes(x)) +
-      geom_histogram(color = "black", fill = "white", binwidth = bw) + 
-      labs(x="x", y="Counts")
+      geom_histogram(color = "black", 
+                     fill = "white", 
+                     binwidth = bw) + 
+      labs(x = "x", 
+           y = "Counts")
   })
   output$plot2 <- renderPlot({
     x <- rnorm(input$n)  
     df <- data.frame(x=x, z=rep(" ", length(x)))
-    ggplot(df, aes(z, x)) + geom_boxplot() + xlab("")
+    ggplot(df, aes(z, x)) + 
+      geom_boxplot() + 
+      xlab("")
   })
 }
 shinyApp(ui, server)
@@ -157,13 +189,12 @@ ui <- fluidPage(
           id="mytabs"
       )
     )  
-  )  
 ))
 ```
 
 Notice again the use of conditionalPanel: now the nbins box appears when the Histogram tab is selected.
 
-Did you notice a slight flaw in the program? When we switch from one graph to the other the data is generated anew, so the graphsare not for the same data set. Let's fix this.
+Did you notice a slight flaw in the program? When we switch from one graph to the other the data is generated a new, so the graphs are not for the same data set. Let's fix this.
 
 Also let's say we want on another tab to show some summary statistics:
 
@@ -186,7 +217,6 @@ ui <- fluidPage(
           id="mytabs"
       )
     )  
-  )  
 ))
 server <- function(input, output) {
   
@@ -196,20 +226,26 @@ server <- function(input, output) {
 
   summaries <- reactive({
      x <- data()
-     list(n=length(x), xbar=round(mean(x), 3), shat=round(sd(x), 3))
+     list(n = length(x), 
+          xbar = round(mean(x), 3), 
+          shat = round(sd(x), 3))
   })
 
   output$plot1 <- renderPlot({
     bw <- diff(range(data()))/as.numeric(input$nbins)
     ggplot(data.frame(x=data()), aes(x)) +
-    geom_histogram(color = "black", fill = "white", binwidth = bw) + 
-    labs(x="x", y="Counts")
+      geom_histogram(color = "black", 
+                   fill = "white", 
+                   binwidth = bw) + 
+      labs(x="x", y="Counts")
   })
   
   output$plot2 <- renderPlot({
     x <- data()
     df <- data.frame(x=x, z=rep(" ", length(x)))
-    ggplot(df, aes(z, x)) + geom_boxplot() + xlab("")
+    ggplot(df, aes(z, x)) + 
+      geom_boxplot() + 
+      xlab("")
   })
   
   output$text1 <- renderText({
@@ -264,13 +300,12 @@ server <- function(input, output) {
     plt
   })
 }
-
 shinyApp(ui, server)
 ```
 
 ##Create/Run/Distribute Shiny Apps
 
-There are a number of ways to run and distribute shiny apps
+There are a number of ways to create, run and distribute shiny apps:
 
 1.  Create an app: 
    -  small apps are easiest done within RStudio, as in our example1  
@@ -312,11 +347,15 @@ runGitHub("reponame", "username",
           subdir = "shiny/myapp1")
 ```
 
-here I  assume you have myapp1 in a folder called shiny.  
+here I  assume you have myapp1 in a folder called shiny. 
+
+We will talk about Github a lot more soon.  
+
    -  you can make a zip file out of the folder myapp1, upload it to a web site and then run
+   
 ```{r eval=FALSE}
 runUrl("http://websiteurl/shiny/myapp1.zip")
 ```
-   -  go to [https://www.shinyapps.io][https://www.shinyapps.io], set up a (free) account. Then you can upload a few apps. The big advantage of this is that even people who don't have R can now run your app.
+   -  go to [https://www.shinyapps.io](https://www.shinyapps.io), set up a (free) account. Then you can upload a few apps. The big advantage of this is that even people who don't have R can now run your app. There are restrictions, though, on a free account, for example no more than 10 people can run an app at the same time.
    
 
