--- a/subset.Rmd
+++ b/subset.Rmd
@@ -13,7 +13,7 @@ th, td {padding: 10px;}
 
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
 whichcomp <- strsplit(getwd(),"/")[[1]][3]
-load(paste0("c:/users/", whichcomp, "/Dropbox/Resma3/Resma3.RData"))
+load(paste0("c:/users/", whichcomp, "/Dropbox/teaching/Resma3/Resma3.RData"))
 library(knitr)
 opts_chunk$set(fig.width=6, fig.align = "center", 
       out.width = "70%", warning=FALSE, message=FALSE)
@@ -83,6 +83,13 @@ students <- data.frame(Age, GPA, Gender)
 students
 ```
 
+Because a vector has rows and columns we now need to specify both:
+
+```{r}
+students[2, 3]
+```
+
+
 There are a variety of ways to do subsetting:
 
 ```{r}
@@ -108,7 +115,7 @@ students[1]
 students[[1]]
 ```
 
-In the first and last case R returns vector, in the second case a data frame with one column. 
+In the first and last case R returns a vector, in the second case a data frame with one column. 
 
 It is possible to tell R not to do this type conversion in the first case
 
