--- a/syl.Rmd
+++ b/syl.Rmd
@@ -7,7 +7,7 @@ output:
 ---
 ```{r, echo=FALSE, warning=FALSE, message=FALSE}
 whichcomp <- strsplit(getwd(),"/")[[1]][3]
-load(paste0("c:/users/", whichcomp, "/Dropbox/Resma3/Resma3.RData"))
+load(paste0("c:/users/", whichcomp, "/Dropbox/teaching/Resma3/Resma3.RData"))
 require(knitr)
 require(ggplot2)
 require(grid)
@@ -18,7 +18,7 @@ require(grid)
 
 Professor: Dr. Wolfgang Rolke  
 Time and Place:  
-Tuesday, Thursday 7:30 - 8:45am  Ch115
+Tuesday, Thursday 2:00 - 3:15pm  SH005
 
 ###Reading List:
 
